; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_ex_cmds2.c_autowrite_all.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_ex_cmds2.c_autowrite_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, %struct.TYPE_6__* }

@p_aw = common dso_local global i64 0, align 8
@p_awa = common dso_local global i64 0, align 8
@p_write = common dso_local global i32 0, align 4
@firstbuf = common dso_local global %struct.TYPE_6__* null, align 8
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @autowrite_all() #0 {
  %1 = alloca %struct.TYPE_6__*, align 8
  %2 = load i64, i64* @p_aw, align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %7, label %4

4:                                                ; preds = %0
  %5 = load i64, i64* @p_awa, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %4, %0
  %8 = load i32, i32* @p_write, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %7, %4
  br label %34

11:                                               ; preds = %7
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** @firstbuf, align 8
  store %struct.TYPE_6__* %12, %struct.TYPE_6__** %1, align 8
  br label %13

13:                                               ; preds = %30, %11
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %15 = icmp ne %struct.TYPE_6__* %14, null
  br i1 %15, label %16, label %34

16:                                               ; preds = %13
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %18 = call i64 @bufIsChanged(%struct.TYPE_6__* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %29

20:                                               ; preds = %16
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %29, label %25

25:                                               ; preds = %20
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %27 = load i32, i32* @FALSE, align 4
  %28 = call i32 @buf_write_all(%struct.TYPE_6__* %26, i32 %27)
  br label %29

29:                                               ; preds = %25, %20, %16
  br label %30

30:                                               ; preds = %29
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %31, i32 0, i32 1
  %33 = load %struct.TYPE_6__*, %struct.TYPE_6__** %32, align 8
  store %struct.TYPE_6__* %33, %struct.TYPE_6__** %1, align 8
  br label %13

34:                                               ; preds = %10, %13
  ret void
}

declare dso_local i64 @bufIsChanged(%struct.TYPE_6__*) #1

declare dso_local i32 @buf_write_all(%struct.TYPE_6__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
